# twili-recipes

./: .gitignore  AndroidManifest_template.xml  Cargo.toml  README.md  Trunk.toml  app_build.gradle.kts_template  copy-android.sh  index.html  local.properties_template  styles.css  tailwind.config.js
.github/workflows/: build-and-release.yml  build-android.yml
common/: Cargo.toml
common/src/: config.rs  error.rs  lib.rs  model.rs
metadata/en-US/: full_description.txt  short_description.txt  title.txt
metadata/en-US/changelogs/: 1.txt
metadata/es-ES/: full_description.txt  short_description.txt  title.txt
metadata/es-ES/changelogs/: 1.txt
metadata/pl-PL/: full_description.txt  short_description.txt  title.txt
metadata/pl-PL/changelogs/: 1.txt
src/: build.rs  error.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.properties
src-tauri/capabilities/: main.json
src-tauri/capabilities/schemas/: capabilities.json  linux-schema.json  plugin-manifests.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mobile.rs
src-tauri/src/ai/: chatgpt.rs  error.rs  mod.rs
src-tauri/src/commands/: ai_commands.rs  config_commands.rs  error.rs  example_commands.rs  init_commands.rs  mod.rs  recipe_commands.rs  version_command.rs
src-tauri/src/recipes/: error.rs  local.rs  mod.rs  ncclient.rs
src/components/: about.rs  app.rs  mod.rs  settings.rs  welcome.rs
src/components/common/: header.rs
src/components/recipe/: mod.rs  recipe_editor.rs  recipe_ingredients.rs  recipe_panels.rs  recipe_step.rs  recipe_view.rs
src/components/recipes/: add_recipe.rs  edit_recipe.rs  header.rs  list.rs  list_entry.rs  menu.rs  menu_button.rs  mod.rs  preview.rs
tauri-plugin-keep-screen-on/: .gitignore  Cargo.toml  package.json
tauri-plugin-keep-screen-on/android/: build.gradle.kts
tauri-plugin-keep-screen-on/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-keep-screen-on/android/src/main/java/: Example.kt  ExamplePlugin.kt  KeepScreenOnPlugin.kt
tauri-plugin-keep-screen-on/android/src/test/java/: ExampleUnitTest.kt
tauri-plugin-keep-screen-on/permissions/autogenerated/: reference.md
tauri-plugin-keep-screen-on/src/: lib.rs  mobile.rs  models.rs
tests/: integration.rs
