[package]
name = "twili-recipes-ui"
version = "0.1.1"
edition = "2021"

[dependencies]
log = "0.4"
leptos = { version = "0.6.10", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.10", features = ["csr", "nightly"] }
leptos_meta = {version = "0.6.10", features = ["csr", "nightly"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
serde-wasm-bindgen = "0.6"
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_log = "1.0.0"
recipes_common = { path = "./common" }
console_error_panic_hook = "0.1.7"
icondata_bi = "0.0.10"
icondata_ri = "0.0.10"
thaw = {version= "0.3.3", features = ["csr"]}
leptos-use = "0.10.10"

[dev-dependencies]
tokio = {version = "1.35.0", features = ["rt", "macros"]}
thirtyfour = "0.31.0"
sysinfo = "0.30.5"
mockito = "1.4.0"

[workspace]
members = [ "common","src-tauri"]
