[package]
name = "twili-recipes"
version = "0.0.0"
description = "Twili Recipes"
authors = ["kandrelczyk"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = {features = [] , version = "2.0.0-beta.15" }

[dependencies]
recipes_common = { path = "../common" }
tauri = { features = ["image-png", "unstable"] , version = "2.0.0-beta.19" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri-plugin-log = "2.0.0-beta.1"
openssl = {version = "0.10.45", features = ["vendored"] }
reqwest = "0.12.4"
confy = "0.6.1"
reqwest_dav = "0.1.9"
async-trait = "0.1.80"
uuid = {version = "1.8.0", features = ["v4"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
